<resources>
    <string name="app_name">WPU</string>
    <string name="popup_mainBackPressNoti">Press the \'Back \' button again to exit.</string>

    <string name="service_title">WPU</string>
    <string name="service_message">WPU is running</string>
    <string name="service_tag">WPU is running</string>

    <string name="item_youtube">Youtube</string>
    <string name="item_naver">Naver</string>
    <string name="item_google">Google</string>
    <string name="basic_confirm">Comfirm</string>
    <string name="basic_edit">Edit</string>
    <string name="basic_cancel">Cancel</string>
    <string name="basic_close">Close</string>
    <string name="basic_save">Save</string>
    <string name="basic_delete">Delete</string>
    <string name="basic_shortcuts">Shortcuts</string>
    <string name="basic_shortcuts_hint">Shortcuts name</string>
    <string name="message_01">Could not connect to this site \n Please check the URL address</string>
    <string name="message_02">Click the Add button on the right to register a shortcut</string>
    <string name="message_03">E\nM\nP\nT\nY</string>
    <string name="message_04">Please enter a URL address</string>
    <string name="message_05">Please enter a URL format</string>
    <string name="message_06">Shortcut item is empty</string>
    <string name="message_07">Enter URL address</string>
    <string name="init_shortcuts">S</string>

    <string name="webview_help_1">Enter the URL address</string>
    <string name="webview_help_2">Name of shortcut</string>
    <string name="webview_help_3">Add a shortcut</string>
    <string name="webview_help_4">Shortcuts list</string>
    <string name="webview_help_5">Touch lock\nbutton</string>
    <string name="webview_help_main">How to use WPU</string>

    <string name="popup_timer_title">Timer setting</string>
    <string name="popup_timer_message">Automatically close the app\non the timer set</string>
    <string name="popup_timer_finish">Close the app\non the timer set</string>
    <string name="popup_timer_alarm">The app will close after\n%1$d hour and %2$d minutes</string>
    <string name="popup_sensor_title">Shake settings</string>
    <string name="popup_sensor_message">Set the strength of the shake on unlock.</string>
    <string name="popup_sensor_select1">Very weakly</string>
    <string name="popup_sensor_select2">Weakly</string>
    <string name="popup_sensor_select3">Normal</string>
    <string name="popup_sensor_select4">Strongly</string>
    <string name="popup_sensor_select5">Very strongly</string>

    <string name="admob_app_id">ca-app-pub-2028686242886111~9632276770</string>
    <string name="front_ad_unit_id">ca-app-pub-2028686242886111/3066868425</string>
    <string name="front_ad_unit_id_for_test">ca-app-pub-3940256099942544/1033173712</string>

</resources>
