<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@drawable/dialog_round_back"
        tools:context=".MainActivity">
    <!-- 상단 -->
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:layout_marginTop="10dp"
            android:gravity="center">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:orientation="vertical"
                    android:gravity="left|center"
                    android:paddingLeft="10dp">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/popup_sensor_title"
                        android:textStyle="bold"
                        android:layout_marginBottom="5dp"
                        android:textColor="#000000"
                        android:textSize="18dp"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/popup_sensor_message"
                        android:textStyle="normal"
                        android:textSize="15dp"/>

            </LinearLayout>
            <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:layout_gravity="center|right"
                    android:paddingRight="10dp">
                <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/icon_lock_closeed"/>
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp">
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
            <TextView
                    android:id="@+id/tv_sensorValue1"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:text="@string/popup_sensor_select1"
                    android:background="@drawable/background_popup_sensor_unselect"
                    android:layout_margin="7dp"
                    android:textSize="7dp"
                    android:gravity="center|left"
                    android:textStyle="bold"
                    android:textColor="#313131"
                    android:padding="7dp"
                    />
        </LinearLayout>
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
            <TextView
                    android:id="@+id/tv_sensorValue2"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:text="@string/popup_sensor_select2"
                    android:background="@drawable/background_popup_sensor_unselect"
                    android:layout_margin="7dp"
                    android:textSize="7dp"
                    android:gravity="center|left"
                    android:textStyle="bold"
                    android:textColor="#313131"
                    android:padding="7dp"
                    />
        </LinearLayout>
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
            <TextView
                    android:id="@+id/tv_sensorValue3"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:text="@string/popup_sensor_select3"
                    android:background="@drawable/background_popup_sensor_unselect"
                    android:layout_margin="7dp"
                    android:textSize="7dp"
                    android:gravity="center|left"
                    android:textStyle="bold"
                    android:textColor="#313131"
                    android:padding="7dp"
                    />
        </LinearLayout>
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
            <TextView
                    android:id="@+id/tv_sensorValue4"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:text="@string/popup_sensor_select4"
                    android:background="@drawable/background_popup_sensor_unselect"
                    android:layout_margin="7dp"
                    android:textSize="7dp"
                    android:gravity="center|left"
                    android:textStyle="bold"
                    android:textColor="#313131"
                    android:padding="7dp"
                    />
        </LinearLayout>
        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
            <TextView
                    android:id="@+id/tv_sensorValue5"
                    android:layout_width="42dp"
                    android:layout_height="42dp"
                    android:text="@string/popup_sensor_select5"
                    android:background="@drawable/background_popup_sensor_unselect"
                    android:layout_margin="7dp"
                    android:textSize="7dp"
                    android:gravity="center|left"
                    android:textStyle="bold"
                    android:textColor="#313131"
                    android:padding="7dp"
                    />
        </LinearLayout>






    </LinearLayout>

    <!-- 하단 버튼 레이아웃 -->
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.2"
            android:orientation="horizontal">
        <Button
                android:id="@+id/btn_dialogNagative"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="13dp"
                android:background="@drawable/dialog_negative_back"
                android:textAllCaps="false"
                android:textColor="#000000"
                android:textStyle="bold"
                android:text="@string/basic_cancel"/>
        <Button
                android:id="@+id/btn_dialogPositive"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="13dp"
                android:textStyle="bold"
                android:textColor="@color/defaultWhite"
                android:background="@drawable/dialog_positive_back"
                android:textAllCaps="false"
                android:text="@string/basic_confirm"/>
    </LinearLayout>
</LinearLayout>
